--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,6 @@ jobs:
         with:
           sdk: 3.0.0
       - run: dart format --set-exit-if-changed .
-      - run: flutter pub get
+      - run: dart pub get
       - run: dart run build_runner build --delete-conflicting-outputs
-      - run: flutter analyze
+      - run: dart analyze
