--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - run: dart format --set-exit-if-changed .
       - run: dart pub get
       - run: dart run build_runner build --delete-conflicting-outputs
-      - run: dart analyze
+      - run: dart analyze --fatal-infos
   test:
     runs-on: ubuntu-latest
     steps:
