ci: run integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,4 @@ jobs:
       - run: dart pub get
       - run: dart run build_runner build --delete-conflicting-outputs
       - run: dart test
+      - run: dart test ./integration_test
