--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: http_client_test
 description: Test HTTP clients using a snapshot of the request and response
 publish_to: 'none'
 version: 0.0.0
+repository: https://github.com/SoftwareFreak1/http_client_test
 
 environment:
   sdk: ^3.0.0
