--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       - run: dart run build_runner build --delete-conflicting-outputs
       - run: dart test
       - run: dart test ./integration_test
+      - run: dart test ./example/test
   pana:
     runs-on: ubuntu-latest
     steps:
