--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - run: dart test
       - run: dart test ./integration_test
       - run: dart test ./example/test
-  pana:
+  publish-ready:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
