--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,4 @@ jobs:
           sdk: 3.0.0
       - run: dart pub global activate pana
       - run: dart pub global run pana --no-warning --exit-code-threshold 0
+      - run: dart pub publish --dry-run
