chore: add code spell checker extension to the dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"dart-code.dart-code"
+				"dart-code.dart-code",
+				"streetsidesoftware.code-spell-checker"
 			]
 		}
 	}
